# dotbak

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml  uv_quickstart.md
.githooks/: pre-commit
src/dotbak/: __init__.py  cli.py  config.py  filesystem.py  manager.py  manifest.py  models.py
tests/: conftest.py  test_cli.py  test_config.py  test_filesystem.py  test_manager.py
tests/integration/: test_e2e_cli.py
