[project]
name = "dotbak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
    "tomli-w>=1.2.0",
    "typer>=0.20.0",
]

[project.scripts]
dotbak = "dotbak.cli:run"
[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=5.13.2",
    "pre-commit>=3.7.0",
    "pytest>=8.4.2",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.uv]
package = true
